Bug 473948 - Loose Data at Image > Separate Image
Summary: Loose Data at Image > Separate Image
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 5.1.5
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-08-30 14:29 UTC by AntohaRDNS
Modified: 2023-08-31 08:13 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
problem_desctiption (2.32 MB, image/png)
2023-08-30 14:29 UTC, AntohaRDNS
Details

Note You need to log in before you can comment on or make changes to this bug.
Description AntohaRDNS 2023-08-30 14:29:57 UTC
Created attachment 161284 [details]
problem_desctiption

SUMMARY

When trying to split an image into separate channels using the Image command Image > Separate Image, the resulting layers are cropped in those places where the alpha channel of the original image contained the value = 0.
Please see attached image with description


STEPS TO REPRODUCE
1. Load PNG Image with RBGA channels (A channel must contain 0-value pixels)
2. Image > Separate Image...
    Options:
    Source: Current Layer
    Alpha Options: Create Separate separatoin from alpha channel
    [ v ] Output to color, not grayscale

OBSERVED RESULT

    RGB - channels are converted to cropped layers 

EXPECTED RESULT

    RGB - channels are converted to layers without crop

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Dmitry Kazakov 2023-08-31 08:12:52 UTC
Git commit eeb2241565a424d27fc1c0e75d10d4f6f0a37bc2 by Dmitry Kazakov.
Committed on 31/08/2023 at 10:12.
Pushed by dkazakov into branch 'master'.

Fix color values under transparent pixels be lost in Separate Image

M  +6    -1    plugins/extensions/separate_channels/kis_channel_separator.cc

https://invent.kde.org/graphics/krita/-/commit/eeb2241565a424d27fc1c0e75d10d4f6f0a37bc2
Comment 2 Dmitry Kazakov 2023-08-31 08:13:18 UTC
Git commit 966e9ddd9f95ae50e219d1c59e42dfc4755c6060 by Dmitry Kazakov.
Committed on 31/08/2023 at 10:13.
Pushed by dkazakov into branch 'krita/5.2'.

Fix color values under transparent pixels be lost in Separate Image

M  +6    -1    plugins/extensions/separate_channels/kis_channel_separator.cc

https://invent.kde.org/graphics/krita/-/commit/966e9ddd9f95ae50e219d1c59e42dfc4755c6060