Fix color values under transparent pixels be lost in Separate Image

BUG:473948