plugins/extensions/separate_channels/kis_channel_separator.cc
@@ -84,7 +84,12 @@ void KisChannelSeparator::separate(KoUpdater * progressUpdater, enumSepAlphaOpti
     const QList<KoChannelInfo *> channels = srcCs->channels();
     vKisPaintDeviceSP paintDevices;
 
-    QRect rect = src->exactBounds();
+    /**
+     * We should process the entire image, even when its pixels are
+     * transparent, because we might be pulling colors from under a
+     * zero-alpha channel.
+     */
+    const QRect rect = image->bounds();
 
     KisImageBarrierLock lock(image);
     int i = 0;
